--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html>
 <head>
     <title>Hello World</title>
+    <style>
+        body {
+            background-image: url('https://raw.githubusercontent.com/konapallisrinathreddy/newproject/master/download.jpg');
+            background-size: cover;
+            background-position: center;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            color: white;
+            text-align: center;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        h1 {
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello, World!</h1>
